# rust-benchmark-example

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
benches/: secp256k1_verify.rs
src/: lib.rs
