[package]
name    = "crypto"
version = "0.0.0"
edition = "2021"

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

[dev-dependencies]
criterion     = "0.3"
k256          = "0.13"
rand          = "0.8"
random-string = "1"

[[bench]]
name    = "secp256k1_verify"
harness = false
